--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -16,3 +16,4 @@ $color-header-footer-bar: $dark-blue;
 $color-submit-btn: $green;
 $color-clear-btn: $red;
 $color-input-text: $dark-blue;
+$color-login-status: $dark-gray;
