--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -17,3 +17,5 @@ $color-submit-btn: $green;
 $color-clear-btn: $red;
 $color-input-text: $dark-blue;
 $color-login-status: $dark-gray;
+
+$break: 875px;
