--- a/lib/style.scss
+++ b/lib/style.scss
@@ -5,6 +5,7 @@ body {
   color: $headerBarAndMsgText;
 }
 
+
 .filter-bar {
   height: 20px;
   background-color: $filterAndMessageInputBackground;
@@ -16,8 +17,14 @@ body {
   font-size: 14px;
 }
 
-.up-down-button {
+.header {
+  background-color: $headerBarAndMsgText;
+  // display: inline-block;
+  // width: 100vw;
+}
+.sort-buttons {
   float: right;
+  // display: inline-block;
 }
 
 // .sort-newest-user {
@@ -27,10 +34,12 @@ body {
 //   margin: 15px 5px 15px;
 //
 // }
-.sort-newest-user, .sort-oldest-user {
+button.sort-up, button.sort-down {
+  position: relative;
+  bottom: 49px;
   height: 30px;
-  margin: 15px 10px 15px 0;
-
+  margin: 15px 10px 20px 0;
+  font-size: 14px;
   border-radius: 5px;
   background-color: $sortButton;
   border: none;
@@ -41,7 +50,7 @@ body {
   outline: 0;
   box-shadow: none;
   -webkit-box-shadow: none;
-  display: absolute;
+  // position: absolute;
   z-index: 999999;
 }
 
@@ -61,39 +70,58 @@ body {
 
 .messageWindow {
   width: 60vw;
-height: 66vh;
-overflow: scroll;
+  height: 790px;
+  overflow: scroll;
+  padding: 0 10px;
+  word-wrap: break-word;
+}
+
+p.users-text {
+  font-weight: 800;
 }
 
 .userList {
+  background-color: #ECF0F1;
   position: absolute;
-  right: 0;
-  bottom: 700px;
-
+  left: 560px;
+  top: 65px;
+  padding: 13px;
+  height: 750px;
+    width: 33.7%;
 }
 
-.user-welcome-bar{
+li {
+  list-style-type: none;
+}
+
+.welcome-message {
+  padding: 16px 30px;
+  margin: -14px;
+}
+
+.user-welcome-bar {
   background-color: $loggedInBarBackground;
 }
+
+// .message-input-form {
+//   height: 30px;
+// }
 
 #new-message--content {
   height: 100px;
   border: 1px dotted aliceblue;
 }
 
-.MessageInput {
+.message-input {
   display: inline-block;
   margin: 5px;
 }
 
-.CharacterCounter {
+.char-counter {
   display: inline-block;
   padding: 5px;
 }
 
-.header {
-  background-color: $headerBarAndMsgText;
-}
 .title{
   display: inline-block;
   padding: 0 25px;
@@ -104,22 +132,49 @@ overflow: scroll;
   background-color: $headerBarAndMsgText;
 }
 
+.sign-in-button {
+  position: absolute;
+  right: 11px;
+  bottom: 26px;
+}
+
+.sign-out-button {
+  position: absolute;
+  right: 11px;
+  bottom: 26px;
+}
+
+.sign-in-button, .sign-out-button {
+  background-color: $submitAndLogInOutButton
+}
+
 .char-counter{
   color: white;
 }
+
 .submit-button {
+  background-color: $submitAndLogInOutButton;
+}
+
+.clear-button {
+  background-color: $clearButton;
+}
+
+button.sort-up, button.sort-down, .submit-button, .clear-button, .sign-in-button, .sign-out-button {
   margin: 5px;
-  background-color: $submitAndLoginButton;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 5px 13px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-}
-
-.ClearButton {
-  margin: 5px;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 3px;
+  border-style: none;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 // colors
