--- a/lib/variables.scss
+++ b/lib/variables.scss
@@ -9,5 +9,5 @@ $messageSender: #35749C;
 
 $loggedInBarBackground: #95A5A5;
 $counterColor: #8D98A2;
-$submitAndLoginButton: #2CCD70;
+$submitAndLogInOutButton: #2CCD70;
 $clearButton: #E74D3C;
