--- a/lib/style.scss
+++ b/lib/style.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixin";
 
 body {
   font-family: $primary-font;
@@ -7,13 +8,9 @@ body {
 
 
 .filter-bar {
-  display: inline-block;
-  margin: 5px;
-  border-radius: 3px;
-  border: none;
-  height: 30px;
+  @include input-bar;
   width: 350px;
-  background-color: $filterAndMessageInputBackground;
+
 }
 
 ::-webkit-input-placeholder {
@@ -23,38 +20,14 @@ body {
 
 .header {
   background-color: $headerBarAndMsgText;
-  // display: inline-block;
-  // width: 100vw;
+  display: flex;
+  align-items: center;
 }
 .sort-buttons {
   float: right;
-  // display: inline-block;
 }
-
-// .sort-newest-user {
-// }
-//
-// .sort-oldest-user {
-//   margin: 15px 5px 15px;
-//
-// }
 button.sort-up, button.sort-down {
-  position: relative;
-  bottom: 49px;
-  height: 30px;
-  margin: 15px 10px 20px 0;
-  font-size: 14px;
-  border-radius: 5px;
-  background-color: $sortButton;
-  border: none;
-  padding: 6px 10px 4px 10px;
-  text-decoration: none;
-  color: white;
-  cursor: pointer;
-  outline: 0;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  // position: absolute;
+  @include button-display;
 }
 
 .users-text {
@@ -84,13 +57,7 @@ p.users-text {
 }
 
 .user-list {
-  background-color: #ECF0F1;
-  position: absolute;
-  left: 784px;
-  top: 65px;
-  padding: 13px;
-  height: 750px;
-  width: 35.8%;
+@include userlist;
 }
 
 li {
@@ -117,13 +84,8 @@ li {
 }
 
 .message-input {
-  display: inline-block;
-  margin: 5px;
-  border-radius: 3px;
-  border: none;
-  height: 30px;
+  @include input-bar;
   width: 700px;
-  background-color: $filterAndMessageInputBackground;
 }
 
 ::-webkit-input-placeholder {
@@ -147,15 +109,11 @@ li {
 }
 
 .sign-in-button {
-position: relative;
-left: 86%;
-bottom: 28px;
+@include sign-in-button;
 }
 
 .sign-out-button {
-  position: relative;
-  bottom: -15px;
-  left: 15px;
+@include sign-in-button;
 }
 
 .sign-in-button, .sign-out-button {
@@ -175,25 +133,5 @@ bottom: 28px;
 }
 
 button.sort-up, button.sort-down, .submit-button, .clear-button, .sign-in-button, .sign-out-button {
-  margin: 5px;
-  border: none;
-  color: white;
-  padding: 5px 13px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 300;
-  border-radius: 3px;
-  border-style: none;
-  &:hover {
-    cursor: pointer;
-  }
+@include button-style;
 }
-
-// colors
-// mixins
-// react-addons-test-utilsapp-temp
-// buttons
-// input-fields
-// typography
