--- a/lib/mixin.scss
+++ b/lib/mixin.scss
@@ -1,4 +1,4 @@
-@mixin button-display{
+@mixin button-display {
   position: relative;
   height: 30px;
   margin: 15px 10px 20px 0;
@@ -16,21 +16,22 @@
 }
 
 @mixin button-style {
-margin: 5px;
-border: none;
-color: white;
-padding: 5px 13px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 16px;
-font-weight: 300;
-border-radius: 3px;
-border-style: none;
-&:hover {
-  cursor: pointer;
+  margin: 5px;
+  border: none;
+  color: white;
+  padding: 5px 13px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 3px;
+  border-style: none;
+    &:hover {
+    cursor: pointer;
+    }
 }
-}
+
 @mixin input-bar {
   display: inline-block;
   margin: 5px;
@@ -39,20 +40,30 @@ border-style: none;
   height: 30px;
   background-color: $filterAndMessageInputBackground;
 }
-@mixin userlist {
+
+@mixin message-window {
+  width: 55vw;
+  height: 790px;
+  overflow: scroll;
+  padding: 0 10px;
+  word-wrap: break-word;
+  display: inline-block;
+}
+
+@mixin user-list {
   background-color: #ECF0F1;
-  position: absolute;
-  left: 784px;
-  top: 65px;
   padding: 13px;
   height: 750px;
   width: 35.8%;
+  display: inline-block;
 }
+
 @mixin sign-in-button{
   position: relative;
   left: 86%;
   bottom: 28px;
 }
+
 @mixin sign-out-button {
   position: relative;
   bottom: -15px;
