--- a/lib/style.scss
+++ b/lib/style.scss
@@ -8,7 +8,7 @@ body {
 
 .filter-bar {
   @include input-bar;
-  width: 350px;
+  width: 250px;
 }
 
 ::-webkit-input-placeholder {
@@ -18,8 +18,7 @@ body {
 
 .header {
   background-color: $headerBarAndMsgText;
-  display: flex;
-  align-items: center;
+  @include container-flex;
 }
 
 .sort-buttons {
@@ -43,16 +42,28 @@ button.sort-up, button.sort-down {
   color: $messageTimeStamp;
 }
 
-.message-window {
-  @include message-window;
-}
-
 p.users-text {
   font-weight: 800;
 }
 
+.message-window, .user-list {
+  
+}
+
+.message-window {
+  @include message-window;
+}
+
 .user-list {
   @include user-list;
+}
+
+.message-user-container {
+  @include container-flex;
+}
+
+.message-input-container {
+  @include container-flex;
 }
 
 li {
@@ -60,18 +71,24 @@ li {
 }
 
 .welcome-message {
-  padding: 16px 30px;
-  margin: -14px;
+  // padding: 16px 30px;
+  // margin: 5px;
 }
 
 .user-welcome-bar {
+  @include container-flex;
   position: relative;
   background-color: $loggedInBarBackground;
 }
 
+.header, .user-welcome-bar, .message-input-form {
+  height: 60px;
+}
+
 .message-input-form {
-  padding-top: 12px;
-  padding-left: 10px;
+  @include container-flex;
+  // padding-top: 12px;
+  // padding-left: 10px;
 }
 
 #new-message--content {
@@ -81,7 +98,7 @@ li {
 
 .message-input {
   @include input-bar;
-  width: 700px;
+  width: 300px;
 }
 
 ::-webkit-input-placeholder {
@@ -90,8 +107,8 @@ li {
 }
 
 .char-counter {
-  display: inline-block;
-  padding: 5px;
+  // display: inline-block;
+  // padding: 5px;
 }
 
 .title{
