--- a/lib/mixin.scss
+++ b/lib/mixin.scss
@@ -42,20 +42,36 @@
 }
 
 @mixin message-window {
-  width: 55vw;
+  width: 65%;
   height: 700px;
   overflow: scroll;
-  padding: 0 10px;
+  // padding: 0 10px;
   word-wrap: break-word;
-  display: inline-block;
+  // display: inline-block;
+}
+
+@mixin message-window-MQ {
+  width: 90%;
+  height: 500px;
+  // overflow: scroll;
+  // padding: 0 10px;
+  word-wrap: break-word;
+  // display: inline-block;
 }
 
 @mixin user-list {
-  background-color: #ECF0F1;
-  padding: 13px;
+  width: 35%;
   height: 700px;
-  width: 36.8%;
-  display: inline-block;
+  background-color: #ECF0F1;
+  // padding: 13px;
+  // display: inline-block;
+}
+
+@mixin user-list-MQ {
+  width: 100%;
+  height: 200px;
+  // padding: 13px;
+  // display: inline-block;
 }
 
 @mixin container-flex {
@@ -74,4 +90,8 @@
   position: relative;
   bottom: -15px;
   left: 15px;
+}
+
+@mixin media-query {
+  display: block;
 }
