--- a/lib/style.scss
+++ b/lib/style.scss
@@ -44,11 +44,8 @@ button.sort-up, button.sort-down {
 
 p.users-text {
   font-weight: 800;
+  margin-left: 10px;
 }
-
-// .message-window, .user-list {
-//
-// }
 
 .message-window {
   @include message-window;
@@ -64,15 +61,11 @@ p.users-text {
 
 .message-input-container {
   @include container-flex;
+  background-color: $headerBarAndMsgText;
 }
 
 li {
   list-style-type: none;
-}
-
-.welcome-message {
-  // padding: 16px 30px;
-  // margin: 5px;
 }
 
 .user-welcome-bar {
@@ -87,8 +80,7 @@ li {
 
 .message-input-form {
   @include container-flex;
-  // padding-top: 12px;
-  // padding-left: 10px;
+  background-color: $headerBarAndMsgText;
 }
 
 #new-message--content {
@@ -106,11 +98,6 @@ li {
   font-size: 14px;
 }
 
-.char-counter {
-  // display: inline-block;
-  // padding: 5px;
-}
-
 .title{
   display: inline-block;
   padding: 0 25px;
@@ -118,15 +105,14 @@ li {
 }
 
 .footer{
-  background-color: $headerBarAndMsgText;
+  background-color: $loggedInBarBackground;
 }
 
 .sign-in-button {
-  @include sign-in-button;
-}
-
-.sign-out-button {
-  @include sign-in-button;
+  margin: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sign-in-button, .sign-out-button {
